--- a/lab-01/index.html
+++ b/lab-01/index.html
@@ -11,6 +11,9 @@
 <p id="myElement">
     I'm a paragraph
 </p>
+<p id="myElement2">
+    I'm a paragraph too
+</p>
 <p class="my-class">
     I'm a different class of paragraph.
 </p>
